# mono-core-sdk

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  publish.yml
crates/core-sdk/: Cargo.toml
crates/core-sdk/src/: address.rs  api.rs  bridge.rs  client.rs  clob.rs  consts.rs  delegation.rs  error.rs  lib.rs  mrv.rs  name_registry.rs  native_dev.rs  node_registry.rs  operator_router.rs  oracle.rs  prover_market.rs  pubkey_registry.rs  spending_policy.rs  token_factory.rs  types.rs  vrf.rs  wallet_auth.rs
crates/core-sdk/tests/: ts_bindings.rs
crates/mrv-guest/: Cargo.toml
crates/mrv-guest/src/: lib.rs
