[package]
name = "monolythium-core-sdk"
version = "0.3.13"
description = "Official Rust SDK for Monolythium / LythiumDAG-BFT"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
# Enables ts-rs derives + the `export_bindings` test that writes the
# generated TypeScript types into `bindings/`. The TS workspace consumes
# those files, so production builds keep the dependency dormant.
ts-bindings = ["dep:ts-rs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.35", features = ["sync"] }
ts-rs = { version = "10", optional = true }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
sha3 = "0.10"
blake3 = "1.5"
blst = "0.3"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
getrandom = "0.3"
ml-kem = { version = "0.3.2", features = ["zeroize"] }
zeroize = "1.8"
fips204 = { version = "0.4.6", default-features = false, features = ["ml-dsa-65"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
