[package]
name = "monolythium-mrv-guest"
version = "0.0.1"
description = "Guest-side host syscall wrappers for Monolythium RISC-V (MRV) contracts"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
